<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="hello"></string>
	<string name="app_name">SmartFm study dictionary</string>

	<string name="button_cancel">Cancel</string>
	<string name="button_ok">OK</string>
	<string name="button_open_browser">Open browser</string>

	<string name="create_item_instructions">Enter your item</string>
	<string name="create_item_cue">Second Language Term</string>
	<string name="create_item_cue_language">Second Language</string>
	<string name="create_item_response">First Language Term</string>
	<string name="create_item_response_language">First Language</string>
	<string name="create_item_pos">Part of Speech</string>
	<string name="create_item_response_character">First Language Character Text</string>
	<string name="create_item_cue_character">Second Language Character Text</string>
	<string name="create_item_submit_button">Submit</string>

	<string name="create_example_instructions">Enter your sentence</string>
	<string name="create_example_sentence">Example</string>
	<string name="create_example_sentence_transliteration">Example Transliteration</string>
	<string name="create_example_sentence_language">Example Language</string>
	<string name="create_example_translation">Translation</string>
	<string name="create_example_translation_transliteration">Translation Transliteration</string>
	<string name="create_example_translation_language">Translation Language</string>
	<string name="create_example_submit_button">Submit</string>
	<string name="create_sound_submit_button">Start</string>

	<string name="expandable_list_sample_action">Sample action</string>



	<string name="login_user">Username</string>
	<string name="login_password">Password</string>
	<string name="login_password_confirmation">Password Confirm</string>
	<string name="login_required">Please Login and/or Signup to SmartFM
	</string>
	<string name="login_email">Email</string>
	<string name="login_signup">Signup</string>
	<string name="login_login">Login</string>

	<string name="main_lookup">Study or Native Language Search:</string>
	<string name="main_search_language">Study Language</string>
	<string name="main_recent_lang_pairs_spinner_prompt">Recent Language Pairs</string>
	<string name="main_result_language">Native Language</string>
	<string name="main_submit_button">Lookup</string>
	<string name="main_voice">Voice Input</string>

	<string name="menu_about">About</string>
	<string name="menu_help">Help</string>
	<string name="menu_settings">Settings</string>
	<string name="menu_search_items">Search Items</string>
	<string name="menu_search_lists">Search Lists</string>
	<string name="menu_my_study_lists">Studied Lists</string>
	<string name="menu_my_created_lists">My Lists</string>
	<string name="menu_recent_lists">Community Lists</string>
	<string name="menu_create_item">Add new item</string>
	<string name="menu_create_sound">Add new sound</string>
	<string name="menu_create_example">Add new example</string>
	<string name="menu_add_to_list">Add to study list</string>
	<string name="menu_load_more">Load more results</string>
	<string name="menu_login">Login</string>
	<string name="menu_logout">Logout</string>

	<string name="msg_about">Written by Sam Joseph using the SmartFm API
	</string>

	<string name="msg_help">Type a word or phrase into the search box and hit return, 
	  or the button with the magnifying glass icon ("microphone" icon button for voice 
	  search - not available on all platforms).  Searches query the SmartFm web service
	  and will return any matches against either study or native languages
	  and produces a list of community generated content that may include example sentences, 
	  images and pronunciation audio.  If anything is missing feel free to add by pressing
	  the phone "Menu" hot key to get content creation options.  All content can be studied
	  through a variety of 3rd party applications and those on the SmartFM website.
	</string>

	<string name="preferences_username">SmartFM username</string>
	<string name="preferences_password">SmartFM password</string>
	<string name="preferences_search_lang">Search Language</string>
	<string name="preferences_result_lang">Result Language</string>
	<string name="preferences_general_title">General settings</string>
	<string name="preferences_name">Settings</string>
	<string name="preferences_sounds_title">Sounds</string>

	<string name="search_label">Search</string>
	<string name="search_hint">e.g. cat</string>

	<string name="signup_info">Create an account with SmartFm</string>


	<string name="smartfm_url">http://smart.fm/</string>

	<string name="title_about">About SmartFm</string>
	<string name="title_help">Help</string>



</resources>
