<?xml version="1.0" encoding="utf-8"?>
	<!--
		* Copyright (C) 2007 Google Inc. * * Licensed under the Apache
		License, Version 2.0 (the "License"); * you may not use this file
		except in compliance with the License. * You may obtain a copy of the
		License at * * http://www.apache.org/licenses/LICENSE-2.0 * * Unless
		required by applicable law or agreed to in writing, software *
		distributed under the License is distributed on an "AS IS" BASIS, *
		WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or
		implied. * See the License for the specific language governing
		permissions and * limitations under the License.
	-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent">

	<ScrollView android:layout_width="wrap_content"
		android:layout_height="fill_parent">

		<TableLayout android:layout_width="wrap_content"
			android:layout_height="fill_parent" android:stretchColumns="0">

			<TableRow>
				<TextView android:id="@+id/create_example_sentence_legend"
					android:layout_width="wrap_content" android:text="@string/create_example_sentence"
					android:textStyle="bold" android:gravity="left" android:padding="3dip" />
			</TableRow>

			<TableRow>
				<EditText android:id="@+id/create_example_sentence"
					android:padding="3dip" android:scrollHorizontally="false"
					android:hint="Example Usage e.g. This is Japanese or これは日本語です"
					android:lines="3" android:singleLine="false" android:layout_width="wrap_content" />
			</TableRow>

			<TableRow>
				<TextView android:id="@+id/create_example_sentence_transliteration"
					android:text="@string/create_example_sentence_transliteration"
					android:textStyle="bold" android:gravity="left" android:padding="3dip" />
			</TableRow>

			<TableRow>
				<EditText android:id="@+id/sentence_transliteration"
					android:padding="3dip" android:scrollHorizontally="false"
					android:hint="Optional; space separated Kana or Pinyin e.g. これ は にほんご です"
					android:lines="3" android:singleLine="false" android:layout_width="wrap_content" />
			</TableRow>

			<TableRow>
				<TextView android:id="@+id/create_example_translation_legend"
					android:layout_width="wrap_content" android:text="@string/create_example_translation"
					android:textStyle="bold" android:gravity="left" android:padding="3dip" />
			</TableRow>

			<TableRow>
				<EditText android:id="@+id/create_example_translation"
					android:padding="3dip" android:scrollHorizontally="false"
					android:hint="Example Usage e.g. This is Japanese or これは日本語です"
					android:lines="3" android:singleLine="false" android:layout_width="wrap_content" />
			</TableRow>

			<TableRow>
				<TextView android:id="@+id/create_example_translation_transliteration"
					android:text="@string/create_example_translation_transliteration"
					android:textStyle="bold" android:gravity="left" android:padding="3dip" />
			</TableRow>

			<TableRow>
				<EditText android:id="@+id/translation_transliteration"
					android:padding="3dip" android:scrollHorizontally="false"
					android:hint="Optional; space separated Kana or Pinyin e.g. これ は にほんご です"
					android:lines="3" android:singleLine="false" android:layout_width="wrap_content" />
			</TableRow>

			<TableRow android:gravity="right">
				<Button android:id="@+id/create_example_submit" android:text="@string/create_example_submit_button" />
			</TableRow>
		</TableLayout>
	</ScrollView>
</LinearLayout>

